syntax = "proto3";
package command;
option csharp_namespace = "NET.Cli";

service CommandExecutor {
  rpc Execute (CommandRequest) returns (CommandReply);
}
message CommandRequest { string command = 1; string textfile = 2; }
message CommandReply   { string output  = 1;}
